--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -95,7 +95,7 @@
   animation: bounceIn 1.1s cubic-bezier(.77,0,.175,1) both;
 }
 .hms-btn:hover {
-  background: linear-gradient(90deg, #43cea2, #185a9d);
+  background: linear-gradient(90deg, #32679c);
   color: #fff;
   box-shadow: 0 4px 16px rgba(33,147,176,0.12);
   transform: translateY(-2px) scale(1.04);
