--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -50,7 +50,7 @@
   font-weight: 700;
   margin-bottom: 1.2rem;
   letter-spacing: 1px;
-  background: linear-gradient(90deg, #2193b0, #6dd5ed);
+  background: linear-gradient(90deg, #1b97b6, #6dd5ed);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
